# Govnyak-Strike

./: .gitignore  .gitmodules  CMakeLists.txt  kisak-strike-build-options.cmake
.github/workflows/: kstrike-compile.yml
appframework/: CMakeLists.txt
avi/: CMakeLists.txt
bitmap/: CMakeLists.txt  colorconversion.cpp
bonesetup/: bone_utils.cpp
cmake/: detect_platform.cmake  platform_dirs.cmake  protobuf_builder.cmake  source_dll_base.cmake  source_dll_posix_base.cmake  source_exe_base.cmake  source_exe_posix_base.cmake  source_lib_base.cmake  source_posix_base.cmake  source_video_base.cmake
common/: imageutils.cpp
datacache/: CMakeLists.txt
dedicated/: CMakeLists.txt
dedicated_main/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt  bugreporter.cpp  cl_main.cpp  colorcorrectionpanel.cpp  engine_inc.cmake  gl_matsysiface.cpp  host.cpp  modelloader.cpp  sv_main.cpp  sv_uploadgamestats.cpp  vengineserver_impl.cpp
engine/audio/private/: snd_dma.cpp  snd_wave_source.cpp  voice.cpp  windows_audio.cpp
engine/voice_codecs/minimp3/: CMakeLists.txt  vaudio_minimp3.cpp
engine/voice_codecs/opus/: CMakeLists.txt
filesystem/: CMakeLists.txt
game/client/: CMakeLists.txt  c_baseentity.cpp  c_entityfreezing.cpp  c_env_cascade_light.cpp  c_point_commentary_node.cpp  c_team.cpp  cdll_client_int.cpp  cdll_client_int.h  client_base.cmake  client_cstrike15.vpc  client_econ_base.cmake  clientmode_shared.cpp  hud.cpp  hud_basechat.cpp  hud_closecaption.cpp  hud_savestatus.cpp  hud_subtitles.cpp  particlemgr.h  physics_main_client.cpp  subtitlepanel.cpp  vgui_centerstringpanel.cpp  vgui_video.cpp
game/client/cstrike15/: c_cs_playerresource.cpp  cs_custom_texture_saver.cpp  cs_hud_chat.cpp  cs_hud_chat.h
game/client/cstrike15/Scaleform/HUD/: sfhudinfopanel.cpp  sfhudreticle.cpp
game/client/cstrike15/gameui/: gameui_interface.cpp  vguisystemmoduleloader.cpp
game/client/cstrike15/gameui/cstrike15/: cstrike15basepanel.cpp
game/client/cstrike15/uicomponents/: uicomponent_common.h
game/server/: ai_movesolver.cpp  physics_main.cpp  server_base.cmake
game/server/cstrike15/: cs_player.cpp
game/server/cstrike15/bot/states/: cs_bot_idle.cpp  cs_bot_move_to.cpp
game/server/cstrike15/hostage/: cs_simple_hostage.cpp
game/shared/: baseachievement.cpp  predictioncopy.cpp  predictioncopy_helpers.cpp  predictioncopy_test.cpp
game/shared/cstrike15/: cs_gamerules.cpp  cs_gamerules.h  cs_shareddefs.h  cs_workshop_manager.h  cstrike15_item_inventory.h  weapon_c4.cpp
game/shared/cstrike15/bot/: bot_constants.h  bot_profile.cpp
game/shared/econ/: econ_item.cpp  econ_item.h  econ_item_view.cpp
gcsdk/: CMakeLists.txt  job.cpp
inputsystem/: CMakeLists.txt
interfaces/: interfaces.cpp
ivp/havana/havok/hk_base/: CMakeLists.txt  base_types.h
ivp/havana/havok/hk_base/string/: string.cpp
ivp/ivp_collision/: ivp_compact_ledge.hxx
ivp/ivp_compact_builder/: ivp_surbuild_pointsoup.cxx
ivp/ivp_intern/: ivp_time.cxx
launcher/: CMakeLists.txt  launcher.cpp
launcher_main/: CMakeLists.txt
localize/: CMakeLists.txt
matchmaking/: CMakeLists.txt  matchmaking_base_inc.cmake  matchmaking_cstrike15_inc.cmake
materialsystem/: CMakeLists.txt  cmaterialsystem.cpp  ctexture.cpp
materialsystem/shaderapidx9/: CMakeLists.txt
materialsystem/stdshaders/: CMakeLists.txt
mathlib/: sse.cpp
public/: dt_utlvector_recv.cpp  dt_utlvector_send.cpp  filesystem_init.cpp
public/bitmap/: imageformat.h  imageformat_declarations.h
public/gcsdk/: gc_convar.h  job.h
public/interfaces/: interfaces.h
public/tier0/: etwprof.h  ia32detect.h  memoverride.cpp  threadtools.inl
public/vgui_controls/: FileOpenStateMachine.h
serverbrowser/: CMakeLists.txt
soundemittersystem/: CMakeLists.txt
soundsystem/: CMakeLists.txt
soundsystem/lowlevel/: CMakeLists.txt
studiorender/: CMakeLists.txt  r_studiosubd.cpp
tier0/: CMakeLists.txt  dbg.cpp  etwprof.cpp
tier1/: CMakeLists.txt
tier2/: CMakeLists.txt
togl/: CMakeLists.txt
vgui2/src/: CMakeLists.txt  System.cpp
vgui2/vgui_controls/: CMakeLists.txt  FileOpenStateMachine.cpp
vgui2/vgui_surfacelib/: CMakeLists.txt
vguimatsurface/: CMakeLists.txt
vphysics/: CMakeLists.txt  main.cpp  physics_environment.cpp
vphysics_bullet/: CMakeLists.txt
vscript/: CMakeLists.txt  vscript.cpp
vstdlib/: CMakeLists.txt
vtf/: CMakeLists.txt
